Changed main module name to DeliveryTracker
- Changed packages name for java classes to track.app

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>track.app</groupId>
-    <artifactId>DeliveryTracking</artifactId>
+    <artifactId>DeliveryTracker</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>DeliveryTracking</name>
     <description>DeliveryTracking</description>
