Added validation while adding delivery

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.datasource.password=Secret-Parcel@77
 spring.messages.basename=messages
 spring.mvc.view.prefix = /WEB-INF/jsp/
 spring.mvc.view.suffix = .jsp
+spring.jpa.open-in-view = false
