--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 spring.application.name=DeliveryTracking Spring Boot application
 server.port=8080
+server.tomcat.uri-encoding=UTF-8
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.enabled=true
+server.servlet.encoding.force=true
 server.servlet.context-path=/delivery_tracking
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/delivery_tracking
@@ -9,3 +13,5 @@ spring.messages.basename=messages
 spring.mvc.view.prefix = /WEB-INF/jsp/
 spring.mvc.view.suffix = .jsp
 spring.jpa.open-in-view = false
+spring.datasource.tomcat.connection-properties=useUnicode=true;
+spring.webflux.multipart.headers-charset=UTF-8
