Exercise add loggs
- Add extra properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,6 @@ spring.mvc.view.suffix = .jsp
 spring.jpa.open-in-view = false
 spring.datasource.tomcat.connection-properties=useUnicode=true;
 spring.webflux.multipart.headers-charset=UTF-8
+logging.level.track.app.DeliveryTrackingApplication=info
+logging.file.name=log/theLogs
+logging.pattern.file=%d{HH:mm} %-5level %logger{36} - %msg%n
