--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,8 +10,17 @@ spring.datasource.url=jdbc:mysql://localhost:3306/delivery_tracking
 spring.datasource.username=root
 spring.datasource.password=Secret-Parcel@77
 spring.messages.basename=messages
-spring.mvc.view.prefix = /WEB-INF/jsp/
-spring.mvc.view.suffix = .jsp
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=.jsp
 spring.jpa.open-in-view = false
 spring.datasource.tomcat.connection-properties=useUnicode=true;
 spring.webflux.multipart.headers-charset=UTF-8
+
+# Enable DEBUG logging for Spring Security
+logging.level.org.springframework.security=DEBUG
+# Optionally enable DEBUG logging for additional packages
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.security.web=DEBUG
+logging.level.org.springframework.security.config=DEBUG
+# Optional: Customize logging output format
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
