Add pending user
- Add user
- Register page

--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,12 @@
             <optional>true</optional>
         </dependency>
 
+        <!-- Sending emails -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+
         <!-- Testing -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
