--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,12 @@ logging.level.org.springframework.security.web=DEBUG
 logging.level.org.springframework.security.config=DEBUG
 # Optional: Customize logging output format
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=delivery.tracker.application@gmail.com
+spring.mail.password=xibf fxcw eezc jyoe
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.debug=true
